--- a/Notebooks/Imagery-field-analytic-model-geosyspy.ipynb
+++ b/Notebooks/Imagery-field-analytic-model-geosyspy.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "\n",
     "\n",
-    "### @author: HAS\n",
+    "### @author: EarthDaily Agro\n",
     "\n",
     "\n",
     "### Import Dependencies\n",
