--- a/Analytics as a service/EDAgro_RegionalAnalytic_extraction.ipynb
+++ b/Analytics as a service/EDAgro_RegionalAnalytic_extraction.ipynb
@@ -219,11 +219,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = \"prod\"\n",
+    "env = \"\"\n",
     "api_client_id = \"\"\n",
     "api_client_secret = \"\"\n",
-    "api_username = \"EDA_GRAIN_COMMODITY\"\n",
-    "api_password = \"Cx7NMQBq5ayGhP3nKRFYSD\""
+    "api_username = \"\"\n",
+    "api_password = \\""
    ]
   },
   {
