--- a/Analytics as a service/EDAgro_RegionalAnalytic_extraction.ipynb
+++ b/Analytics as a service/EDAgro_RegionalAnalytic_extraction.ipynb
@@ -223,7 +223,7 @@
     "api_client_id = \"\"\n",
     "api_client_secret = \"\"\n",
     "api_username = \"\"\n",
-    "api_password = \\""
+    "api_password = \"\"\n"
    ]
   },
   {
