--- a/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
+++ b/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
@@ -288,8 +288,8 @@
     "env = \"prod\"\n",
     "api_client_id = \"\"\n",
     "api_client_secret = \"\"\n",
-    "api_username = \"EDA_GRAIN_COMMODITY\"\n",
-    "api_password = \"Cx7NMQBq5ayGhP3nKRFYSD\""
+    "api_username = \"\"\n",
+    "api_password = \"\""
    ]
   },
   {
