--- a/Analytics as a service/EDAgro_field_level_vegetation_maps.ipynb
+++ b/Analytics as a service/EDAgro_field_level_vegetation_maps.ipynb
@@ -840,25 +840,24 @@
     "for i in range(len(map_list)) :\n",
     "    api_response = get_satellite_img_tiff(env,bearer_token,seasonfield,vegetation_index,map_list['image_id'][i])  \n",
     "    \n",
-    "    # Répertoire de destination\n",
-    "    path = \"C:/Users/etn/OneDrive - EARTHDAILY/Notebooks/storage/field_level_maps\"\n",
+    "    # Files names to be apply \n",
     "    new_name = f'{map_list['image_id'][i]}.tiff'\n",
     "    new_name = new_name.replace('|', '_')\n",
     "    \n",
-    "    # Fonction pour renommer et sauvegarder les fichiers\n",
+    "    # File renaming and saving function\n",
     "    def save_with_new_names(zip_ref, path, new_name):\n",
     "        for file_info in zip_ref.infolist():\n",
-    "            # Obtenir le nom original du fichier\n",
+    "            # Get original file name\n",
     "            original_name = file_info.filename            \n",
-    "            # Extraire et sauvegarder le fichier avec le nouveau nom\n",
+    "            # Extract and save the file with the new name\n",
     "            with zip_ref.open(file_info) as source, open(os.path.join(path, new_name), 'wb') as target:\n",
     "                target.write(source.read())\n",
     "    \n",
-    "    # Vérifier si le répertoire de destination existe, sinon le créer\n",
+    "    # Check if the destination directory exists, otherwise create it\n",
     "    if not os.path.exists(path):\n",
     "        os.makedirs(path)\n",
     "    \n",
-    "    # Dé-zipper le fichier depuis l'objet BytesIO et renommer les fichiers\n",
+    "    # Unzip file from BytesIO object and rename files\n",
     "    try:\n",
     "        with zipfile.ZipFile(api_response, 'r') as zip_ref:\n",
     "            save_with_new_names(zip_ref, path, new_name)\n",
