Standardize notebook introductory paragraphs
Updating 
- EDAgro_vegetation_time_series
- EDAgro_field_level_vegetation_maps
- EDAgro_regional_analytic_extraction

--- a/Analytics as a service/EDAgro_field_level_vegetation_maps.ipynb
+++ b/Analytics as a service/EDAgro_field_level_vegetation_maps.ipynb
@@ -23,7 +23,7 @@
     "tags": []
    },
    "source": [
-    "# EDAgro - Field level vegetation maps\n",
+    "# EDAgro - Retrieve field level vegetation maps\n",
     "<a href=\"https://earthdaily.com/contact/\">Give Feedback</a> | <a href=\"https://github.com/earthdaily\">Bug report</a>"
    ]
   },
@@ -59,7 +59,7 @@
     "tags": []
    },
    "source": [
-    "**Last update:** 2024-12-10 (Created: 2024-12-01)"
+    "**Last update:** 2024-12-16 (Created: 2024-12-01)"
    ]
   },
   {
@@ -71,9 +71,7 @@
     "tags": []
    },
    "source": [
-    "**Description:** **Description:** this notebooks shows how to extract medium resolution vegetation imagery.\n",
-    "\n",
-    "> 👋 Before moving on with this demo, you must first sign-up and request your Geosys APIs credentials here :⚙️[Try it now](https://earthdailyagro.com/geosys-registration/)\n"
+    "**Description:** this notebooks shows how to extract medium resolution vegetation imagery.\n"
    ]
   },
   {
@@ -86,8 +84,21 @@
    },
    "source": [
     "**References:**\n",
-    "- If you would like to use reflectance and raw images to generate vegetation maps without using this service, you can test [this notebook](https://github.com/earthdaily/Examples-and-showcases/blob/main/Data%20as%20a%20service/EDAgro_reflectance_extraction.ipynb).\n",
-    "- For time series extended capability, your can take a look at [this notebook](https://github.com/earthdaily/ApiShowcase-/blob/main/Notebook/ETN-Notebooks/EDAgro_vegetation_time_series.ipynb)."
+    "- [“Field level maps” APIs swagger](https://api.geosys-na.net/field-level-maps/v5/swagger/index.html)\n",
+    "-  If you would like to use reflectance and raw images to generate vegetation maps without using this service, you can test [this notebook](https://github.com/earthdaily/Examples-and-showcases/blob/main/Data%20as%20a%20service/EDAgro_reflectance_extraction.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6094d15c-8a2c-4577-afe3-abfbb3107c77",
+   "metadata": {},
+   "source": [
+    "**Sign in:**\n",
+    "> - 👋 Before moving on with this demo, you must first sign-up and request your Geosys APIs credentials here :\n",
+    "> - ⚙️[Try it now](https://earthdailyagro.com/geosys-registration/)\n",
+    "\n",
+    "> For more information about our Geosys APIs : \n",
+    "> - 📚 [Geosys APIs to connect with your digital ag application](https://earthdailyagro.com/geosys-platform-api/)"
    ]
   },
   {
@@ -97,7 +108,7 @@
    "source": [
     "#### Introduction\n",
     "____\n",
-    "EarthDaily Agro's “Field level maps” APIs give users simple access to a wide range of pre-calculated vegetation index images. The aim of this notebook is to show how to simply access these images, for a given geometry and date range."
+    "EarthDaily Agro's [“Field level maps” APIs](https://api.geosys-na.net/field-level-maps/v5/swagger/index.html) give users simple access to a wide range of pre-calculated vegetation index images. The aim of this notebook is to show how to simply access these images, for a given geometry and date range."
    ]
   },
   {
@@ -107,9 +118,9 @@
    "source": [
     "#### Objectives\n",
     "____\n",
-    "- Data Acquisition: Assess the coverage for your geometry and period and extract the associated vegetation maps.\n",
-    "- Visualization: Easily visualize them side to side to assess the evolution on your field. \n",
-    "- Data Export: Export your images as GeoTIFFs for visualization in GIS software such as QGIS."
+    "- **Data Acquisition**: Assess the coverage for your geometry and period and extract the associated vegetation maps.\n",
+    "- **Visualization**: Easily visualize them side to side to assess the evolution on your field. \n",
+    "- **Data Export**: Export your images as GeoTIFFs for visualization in GIS software such as QGIS."
    ]
   },
   {
@@ -119,7 +130,8 @@
    "source": [
     "#### Data Description\n",
     "____\n",
-    "Processed images come from EarthDataStore, EarthDaily's STAC catalog. Users have access to all public images (Sentinel 2, Landsat 8, Landsat 9...), but also, depending on their subscription, to other images (on demand, from private satellites). Once the satellites of the Earthdaily constellation will be launched, its images will also be accessible through this service. The imagery includes the BLUE, GREEN, NIR0.8, and RED bands, essential for computing Vegetation Index such as NDVI, EVI, ..."
+    "Imagery data come from EarthDataStore, EarthDaily's STAC catalog. It means that users have access to all public images (Sentinel 2, Landsat 8, Landsat 9...), but also, depending on their subscription, to other images (on demand, from private satellites). Once the satellites of the Earthdaily constellation will be launched, its images will also be accessible through this service. \n",
+    "The imagery includes the BLUE, GREEN, NIR0.8, and RED bands, essential for computing Vegetation Index such as NDVI, EVI, ..."
    ]
   },
   {
@@ -129,7 +141,10 @@
    "source": [
     "#### Methodology\n",
     "____\n",
-    "When you're calling the service, vegetation index calculations are performed (on images/sensors for which the necessary bands are available), cross-calibration coefficients are applied (particularly useful when comparing images from different sensors), and edge pixels are processed."
+    "EDS images are processed by Earthdaily agro into vegetation index images ready for agronomic use. \n",
+    "When you're calling the \"Field level maps\" API, you will :\n",
+    "- First, retrieve the coverage of your field, i.e. the list of all images covering your geometry over the period of interest provided, and with the filters requested.\n",
+    "- Then, for each image, vegetation index calculations are performed (on images/sensors for which the necessary bands are available), cross-calibration coefficients are applied (particularly useful when comparing images from different sensors), and edge pixels are processed."
    ]
   },
   {
