Improve VTS notebook description
Adding MODIS data description in the data section

--- a/Analytics as a service/EDAgro_vegetation_time_series.ipynb
+++ b/Analytics as a service/EDAgro_vegetation_time_series.ipynb
@@ -104,9 +104,11 @@
    "source": [
     "#### Data Description\n",
     "____\n",
+    "##### Medium resolution imagery\n",
     "Medium resolution images come from EarthDataStore, EarthDaily's STAC catalog. Users have access to all public images (Sentinel 2, Landsat 8, Landsat 9...), but also, depending on their subscription, to other images (on demand, from private satellites). Once the satellites of the Earthdaily constellation will be launched, its images will also be accessible through this service. The imagery includes the BLUE, GREEN, NIR0.8, and RED bands, essential for computing Vegetation Index such as NDVI, EVI, ...\n",
     "\n",
-    "Our low-resolution images come from MODIS and Sentinel 3. They have a daily temporal resolution and a spatial pixel resolution of 250m."
+    "##### Low resolution imagery\n",
+    "We use MODIS imagery. MODIS instrument is operating on both the Terra and Aqua spacecraft. The Terra satellite was launched on December 18, 1999 and the Aqua on May 4, 2002. It has a viewing swath width of 2,330 km and views the entire surface of the Earth every one to two days. Its detectors measure 36 spectral bands and it acquires data at 250 m resolution. The imagery includes the NIR and RED bands, required for the computing of NDVI and EVI."
    ]
   },
   {
