--- a/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
+++ b/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
@@ -157,7 +157,7 @@
     "```maths\n",
     "    NDVI = (NIR - RED)/(NIR + RED)\n",
     "```\n",
-    "#### Regional aggregation procedure\n",
+    "##### Regional aggregation procedure\n",
     "The weather and vegetation information computed at regional level is aggregated (median value) at regional units. \n",
     "Those units, named AMUs (agricultural monitoring units), are provided by Earthdaily Agro (callable by their ids). \n",
     "The aggregation for weather is done on all pixels of the area, whereas the vegetation information is computed considering pixel covering vegetation areas only. It is possible to chose an aggregation based on different pixel types (all vegetation, crops, grassland...) depending of your area of interest."
