--- a/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
+++ b/Analytics as a service/EDAgro_regional_analytic_extraction.ipynb
@@ -397,8 +397,8 @@
     "- `id_block`: EDA identifier for a given group of regional entities.\n",
     "- `pixel_type`: MODIS pixels to be considered in the vegetation analytics computation.\n",
     "  \n",
-    "| methodology | code | comment |\n",
-    "| :-- | :-- |:-- |\n",
+    "| methodology | code | \n",
+    "| :-- | :-- |\n",
     "| ALL_VEGETATIONS| 1   |       \n",
     "| SUMMER | 2  |     \n",
     "| WINTERCROPS | 3   |         \n",
