--- a/Analytics as a service/EDAgro_vegetation_time_series.ipynb
+++ b/Analytics as a service/EDAgro_vegetation_time_series.ipynb
@@ -653,7 +653,7 @@
     "plt.xlim(start_x, end_x)\n",
     "plt.xticks(rotation=60)\n",
     "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%d/%m/%Y'))\n",
-    "plt.gca().xaxis.set_major_locator(mdates.DayLocator(interval=30)) 
+    "plt.gca().xaxis.set_major_locator(mdates.DayLocator(interval=30))" 
    ]
   },
   {
